update media query layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,20 +63,22 @@ h2 {
 
 
 .hero-title{
-  color: #fff;
   font-weight: bolder;
   margin: auto;
-  padding-top: 15px;
-  padding-bottom: 15px;
   text-align: center;
   position: absolute;
+  top: 400px;
 }
 @media screen and (max-width:992px){
-    .header-container{
+.header-container{
         padding-top: 60px;
     }
+.hero-title {
+  text-align: center;
+  position: absolute;
+  top: 100px;
+    }
 }
-
 
 /*-------------social media section-----------------------------------------*/
 
